--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,11 @@
   </header>
   <main class="content">
     <section class="profile page__section">
-      <div class="profile__image" style="background-image: url('<%=require(`./images/avatar.jpg`)%>');"></div>
+      <div class="profile__image" style="background-image: url('<%=require(`./images/avatar.jpg`)%>');">
+        <span class="edit_avatar">
+          <div class="icon_edit-avatar"></div>
+        </span>
+      </div>
       <div class="profile__info">
         <h1 class="profile__title">Жак-Ив Кусто</h1>
         <button class="profile__edit-button" type="button"></button>
@@ -36,9 +40,11 @@
     <div class="popup__content">
       <button type="button" class="popup__close"></button>
       <h3 class="popup__title">Редактировать профиль</h3>
-      <form class="popup__form" name="edit-profile">
-        <input type="text" name="name" class="popup__input popup__input_type_name" placeholder="Имя" required>
-        <input type="text" name="description" class="popup__input popup__input_type_description" placeholder="Занятие" required>
+      <form class="popup__form" name="edit-profile" novalidate>
+        <input type="text" name="name" class="popup__input popup__input_type_name" id="name-input" placeholder="Имя" minlength="2" maxlength="40" pattern="^[a-zA-Zа-яА-я\-\s]+$" data-error-message="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы" data-empty-message="Вы пропустили это поле" required>
+        <span class="name-input-error form__input-error"></span>
+        <input type="text" name="description" class="popup__input popup__input_type_description" id="description-input" placeholder="Занятие" minlength="2" maxlength="200" pattern="^[a-zA-Zа-яА-я\-\s]+$" data-error-message="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы" data-empty-message="Вы пропустили это поле" required>
+        <span class="description-input-error form__input-error"></span>
         <button type="submit" class="button popup__button">Сохранить</button>
       </form>
     </div>
@@ -47,9 +53,22 @@
     <div class="popup__content">
       <button type="button" class="popup__close"></button>
       <h3 class="popup__title">Новое место</h3>
-      <form class="popup__form" name="new-place">
-        <input type="text" name="place-name" class="popup__input popup__input_type_card-name" placeholder="Название" required>
-        <input type="url" name="link" class="popup__input popup__input_type_url" placeholder="Ссылка на картинку" required>
+      <form class="popup__form" name="new-place" novalidate>
+        <input type="text" name="place-name" class="popup__input popup__input_type_card-name" id="name-place-input" placeholder="Название" minlength="2" maxlength="30" pattern="^[a-zA-Zа-яА-я\-\s]+$" data-error-message="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы" data-empty-message="Вы пропустили это поле" required>
+        <span class="name-place-input-error form__input-error"></span>
+        <input type="url" name="link" class="popup__input popup__input_type_url" id="url-place-input" placeholder="Ссылка на картинку" data-type-message="Введите адрес сайта" data-empty-message="Вы пропустили это поле" required>
+        <span class="url-place-input-error form__input-error"></span>
+        <button type="submit" class="button popup__button">Сохранить</button>
+      </form>
+    </div>
+  </div>
+  <div class="popup popup_type_update-avatar">
+    <div class="popup__content popup-avatar">
+      <button type="button" class="popup__close"></button>
+      <h3 class="popup__title">Обновить аватар</h3>
+      <form class="popup__form" name="new-avatar" novalidate>
+        <input type="url" name="avatarLink" class="popup__input popup__input_type_avatar-url" id="url-avatar-input" placeholder="Ссылка на картинку" data-type-message="Введите адрес сайта" data-empty-message="Вы пропустили это поле" required>
+        <span class="url-avatar-input-error form__input-error"></span>
         <button type="submit" class="button popup__button">Сохранить</button>
       </form>
     </div>
@@ -70,7 +89,10 @@
     <div class="card__description">
       <h2 class="card__title">
       </h2>
+      <div class="like_container">
       <button type="button" class="card__like-button"></button>
+      <div class="place__like-card"> </div>
+      </div>
     </div>
   </li>
 </template>
